# hilbert_qexp

./: Cargo.toml
hilbert_qexp_gen/src/: bignum.rs  diff_op.rs  eisenstein.rs  elements.rs  fcvec.rs  lib.rs
hilbert_qexp_gen/tests/: test.rs
hilbert_sqrt2/: Cargo.toml  results.org
hilbert_sqrt2/data/: str10_0_brs.sobj  str10_0_cand.sobj  str10_1_brs.sobj  str10_1_cand.sobj  str11_0_brs.sobj  str11_0_cand.sobj  str11_1_brs.sobj  str11_1_cand.sobj  str12_0_brs.sobj  str12_0_cand.sobj  str12_1_brs.sobj  str12_1_cand.sobj  str13_0_brs.sobj  str13_0_cand.sobj  str13_0_monoms.sobj  str13_1_brs.sobj  str13_1_cand.sobj  str14_0_brs.sobj  str14_0_cand.sobj  str14_1_brs.sobj  str14_1_cand.sobj  str15_0_brs.sobj  str15_0_cand.sobj  str15_1_brs.sobj  str15_1_cand.sobj  str16_0_brs.sobj  str16_0_cand.sobj  str16_1_brs.sobj  str16_1_cand.sobj  str17_0_brs.sobj  str17_0_cand.sobj  str17_1_brs.sobj  str17_1_cand.sobj  str17_1_weights.sobj  str18_0_brs.sobj  str18_0_cand.sobj  str18_0_weights.sobj  str18_1_brs.sobj  str18_1_cand.sobj  str19_0_brs.sobj  (+51 more)
hilbert_sqrt2/src/: lib.rs  mixed_wt.rs  parallel_wt.rs  structure.rs
hilbert_sqrt2/src/sage/: mod_str.py
hilbert_sqrt2/tests/: test.rs
src/: bignum.rs  eisenstein.rs  elements.rs  fcvec.rs  lib.rs  misc.rs
tests/: test.rs
