[package]
name = "hilbert_sqrt2"
version = "0.1.0"
authors = ["Sho Takemori <stakemorii@gmail.com>"]

[dependencies]
rust-gmp = { git = "https://github.com/stakemori/rust-gmp.git", branch = "develop"}
flint = { git = "https://github.com/stakemori/flint-rust.git"}
libc = "0.2"

[dependencies.hilbert_qexp]
path = "../hilbert_qexp_gen"
